Fixing policy pages content text alignment

--- a/grav/user/themes/haywire/sass/partials/_generic.sass
+++ b/grav/user/themes/haywire/sass/partials/_generic.sass
@@ -19,11 +19,18 @@ section.generic
 			@extend .type__content-section--heading
 			@extend .is-uppercase
 			@extend .is-blue-dark
+
 		p
 			@extend .type__content-section--content
 			color: $grey
 			margin: 2em 0 0
 			max-width: 1024px
+
+		body.privacy-page &,
+		body.terms-of-service &
+			h1, h2, h3, h4, p
+				text-align: left
+
 
 section.generic.is-bg-gold
 	@extend .is-bg-gold
